# bachelor-thesis

./: .gitignore  Makefile  README.md  benchmark_eigenvectors.ipynb  benchmark_validation.ipynb  betas.ipynb  betas_lid_driven.ipynb  ceyron_lid_driven.py  comparison_deep_learning.ipynb  environment.yml  linear_algebra.ipynb  shear_flow.ipynb  shear_validation.ipynb  simple_benchmark.ipynb
benchmarks/: benchmarks.ipynb  run_benchmarks.sh  shear_flow.ipynb
benchmarks/100/128x128/lid_driven_cavity_2d/conjugated_gradient/: stats.csv
benchmarks/100/128x128/lid_driven_cavity_2d/jacobi/: stats.csv
benchmarks/100/128x128/lid_driven_cavity_2d/mgpcg/: stats.csv
benchmarks/100/128x128/lid_driven_cavity_2d/ml/: stats.csv
benchmarks/100/128x128/lid_driven_cavity_2d/multigrid_jacobi/: stats.csv
benchmarks/100/128x128/lid_driven_cavity_2d/multigrid_pcg/: stats.csv
benchmarks/100/16x16/lid_driven_cavity_2d/mgpcg/: stats.csv
benchmarks/100/16x16/lid_driven_cavity_2d/ml/: stats.csv
benchmarks/100/32x32/lid_driven_cavity_2d/mgpcg/: stats.csv
benchmarks/100/32x32/lid_driven_cavity_2d/ml/: stats.csv
benchmarks/100/64x64/lid_driven_cavity_2d/conjugated_gradient/: stats.csv
benchmarks/100/64x64/lid_driven_cavity_2d/jacobi/: stats.csv
benchmarks/100/64x64/lid_driven_cavity_2d/mgpcg/: stats.csv
benchmarks/100/64x64/lid_driven_cavity_2d/ml/: stats.csv
benchmarks/100/64x64/lid_driven_cavity_2d/multigrid_jacobi/: stats.csv
benchmarks/100/64x64/lid_driven_cavity_2d/multigrid_pcg/: stats.csv
benchmarks/1000/128x128/lid_driven_cavity_2d/mgpcg/: stats.csv
benchmarks/1000/128x128/lid_driven_cavity_2d/ml/: stats.csv
benchmarks/1000/16x16/lid_driven_cavity_2d/mgpcg/: stats.csv
benchmarks/1000/16x16/lid_driven_cavity_2d/ml/: stats.csv
benchmarks/1000/32x32/lid_driven_cavity_2d/mgpcg/: stats.csv
benchmarks/1000/32x32/lid_driven_cavity_2d/ml/: stats.csv
benchmarks/1000/64x64/lid_driven_cavity_2d/mgpcg/: stats.csv
benchmarks/1000/64x64/lid_driven_cavity_2d/ml/: stats.csv
benchmarks/200/128x128/lid_driven_cavity_2d/mgpcg/: stats.csv
benchmarks/200/128x128/lid_driven_cavity_2d/ml/: stats.csv
benchmarks/200/16x16/lid_driven_cavity_2d/mgpcg/: stats.csv
benchmarks/200/16x16/lid_driven_cavity_2d/ml/: stats.csv
benchmarks/200/32x32/lid_driven_cavity_2d/mgpcg/: stats.csv
benchmarks/200/32x32/lid_driven_cavity_2d/ml/: stats.csv
benchmarks/200/64x64/lid_driven_cavity_2d/mgpcg/: stats.csv
benchmarks/200/64x64/lid_driven_cavity_2d/ml/: stats.csv
benchmarks/400/128x128/lid_driven_cavity_2d/mgpcg/: stats.csv
benchmarks/400/128x128/lid_driven_cavity_2d/ml/: stats.csv
benchmarks/400/16x16/lid_driven_cavity_2d/mgpcg/: stats.csv
benchmarks/400/16x16/lid_driven_cavity_2d/ml/: stats.csv
benchmarks/400/32x32/lid_driven_cavity_2d/mgpcg/: stats.csv
benchmarks/400/32x32/lid_driven_cavity_2d/ml/: stats.csv
benchmarks/400/64x64/lid_driven_cavity_2d/mgpcg/: stats.csv
benchmarks/400/64x64/lid_driven_cavity_2d/ml/: stats.csv
cpp/: CMakeLists.txt
cpp/cfd_2d/: CMakeLists.txt
cpp/cfd_2d/include/: cfd.h  dl_model.h  multigrid.h  simulations.h  staggered_grid.h
cpp/cfd_2d/prog/: flow_over_step_2d.cpp  karman_vortex_street_2d.cpp  lid_driven_cavity_2d.cpp  parallel_ldc.cpp  plane_shear_flow_2d.cpp
cpp/cfd_2d/src/: cfd.cpp  cfd_params.cpp  multigrid.cpp  vtk.cpp
cpp/cfd_2d/src/solvers/: apcg.cpp  cg.cpp  conjugate_gradient.cpp  dcdm.cpp  jacobi.cpp  jpcg.cpp  mgpcg.cpp  mgpcg_faster.cpp  mgpsd.cpp  ml.cpp  multigrid_jacobi.cpp  multigrid_pcg.cpp  omgpcg.cpp  richardson.cpp  sd.cpp
cpp/cfd_2d/tests/: test_multigrid.cpp
cpp/cfd_3d/: CMakeLists.txt
cpp/cfd_3d/include/: cfd.h  multigrid.h  simulations.h  staggered_grid.h
cpp/cfd_3d/prog/: karman_vortex_street_3d.cpp  lid_driven_cavity_3d.cpp
cpp/cfd_3d/src/: cfd.cpp  cfd_params.cpp  multigrid.cpp  vtk.cpp
cpp/cfd_3d/src/solvers/: conjugate_gradient.cpp  jacobi.cpp  multigrid_pcg.cpp
cpp/kernel/include/: kernel.h
cpp/kernel/src/: filehandler.cpp
ml/: convert_simulation_data_to_low_frequent.py  gauss_fourier.py  generate_eigenvectors.py  generate_random_data.py  loss.py  ml_analysis.ipynb  ml_analysis_azulay.ipynb  ml_analysis_eigenvectors.ipynb  ml_analysis_kaneda.ipynb  ml_generality.ipynb  model.py  model_azulay.py  model_fourier.py  model_nobias.py  onnx_export.py  paper_data.ipynb  spectral_conv.py  train.py  train_finetune_eigenvectors.py  train_lid_driven_cavity.py  train_lid_driven_cavity_2.py  train_lid_driven_cavity_azulay.py  train_lid_driven_cavity_eigenvectors.py  train_lid_driven_cavity_kaneda.py  train_plane_shear_flow.py  tutorial.py  visualise_trained_models.ipynb
ml/experimental/: generate_eigenvectors.py  ml_analysis_eigenvectors.ipynb  ml_analysis_glatzl.ipynb  ml_analysis_kaneda.ipynb  train_lid_driven_cavity_eigenvectors.py  train_lid_driven_cavity_glatzl.py  train_lid_driven_cavity_kaneda.py  visualise_trained_models.ipynb
ml/models/: model.onnx
ml/notebooks/: activation_functions.ipynb  fourier_analysis.ipynb  linear_combinations.ipynb  low_frequent_simulation.ipynb  matrix_finder _eig.ipynb  matrix_finder_karman.ipynb  matrix_finder_rand.ipynb  matrix_finder_sim.ipynb  paper_data.ipynb  pearson.ipynb  spectral_analysis_weights.ipynb  ssim_analysis_eig.ipynb  ssim_analysis_karman.ipynb  ssim_analysis_rand.ipynb  ssim_analysis_sim.ipynb  test_loss_rand.ipynb  test_loss_sim.ipynb
notes/: 1. Meeting
python-examples/: mesh.py  pymesh.sh
